--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Arya Mishra",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.12.1"
   }
 }
