schema and api level validation, password hashing, login api

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "Arya Mishra",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.1",
+    "validator": "^13.12.0"
   }
 }
